kubernetes/base/arches-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: arches-api
  name: arches-api
spec:
  replicas: 1
  selector:
    matchLabels:
      component: arches-api
  template:
    metadata:
      labels:
        component: arches-api
    spec:
      containers:
        - name: arches-api
          image: us-east4-docker.pkg.dev/archesai/images/arches-api
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "2Gi"
              cpu: "1"
            limits:
              memory: "2Gi"
              cpu: "1"
          readinessProbe: # define readiness probe
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe: # define liveness probe
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 20
      hostname: arches-api
      restartPolicy: Always
