kubernetes/base/arches-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: arches-api
  name: arches-api
spec:
  ports:
    - name: "arches-api-port"
      port: 443
      targetPort: 3001
  selector:
    component: arches-api
  type: LoadBalancer
