kubernetes/base/arches-pyservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: arches-pyservice
  name: arches-pyservice
spec:
  ports:
    - name: "3002"
      port: 3002
      targetPort: 80
  selector:
    component: arches-pyservice
